[package]
name = "stilsoft-client"
version = "0.0.0"
edition = "2018"

[dependencies]
anyhow = "= 1.0.75"
clap = "= 2.34.0"
futures = "= 0.3.27"
futures-macro = "= 0.3.27"
memchr = "= 2.5.0"
proc-macro2 = "= 1.0.65"
hyper = { version = "= 0.14.17", features = ["client", "http2", "tcp"] }
httpdate = "= 1.0.2"
indexmap = "= 1.8.2"
once_cell = "= 1.14.0"
tokio = { version = "= 1.16.1", features = ["full"] }
tracing = "= 0.1.30"
tracing-core = "= 0.1.22"
tracing-attributes = "= 0.1.19"
log = "= 0.4.18"
http = "= 0.2.6"
h2 = "= 0.3.13"
tower = { version = "= 0.4.13", features = ["timeout", "util"] }
pin-project = "= 1.0.12"
stilsoft-common = { path = "../common" }
