[package]
name = "stilsoft-server"
version = "0.0.0"
edition = "2018"

[dependencies]
anyhow = "1.0.75"
ctrlc = "3.4.1"
futures = "0.3.28"
humantime = "2.1.0"
hyper = { version = "0.14.27", features = ["server", "http2", "runtime"] }
rand = "0.8.5"
stilsoft-common = { version = "0.0.0", path = "../common" }
tokio = { version = "1.33.0", features = ["full"] }
tower = { version = "0.4.13", features = ["util"] }
