[package]
name = "stilsoft-server"
version = "0.0.0"
edition = "2018"

[dependencies]
tokio = { version = "= 1.16.1", features = ["full"] }
memchr = "= 2.5.0"
once_cell = "= 1.14.0"
proc-macro2 = "= 1.0.65"
log = "= 0.4.18"
hyper = { version = "= 0.14.17", features = ["server", "http2", "runtime"] }
httpdate = "= 1.0.2"
indexmap = "= 1.8.2"
tracing = "= 0.1.30"
tracing-core = "= 0.1.22"
tracing-attributes = "= 0.1.19"
http = "= 0.2.6"
pin-project = "= 1.0.12"
h2 = "= 0.3.13"
anyhow = "= 1.0.75"
clap = "= 2.34.0"
ctrlc = "= 3.2.2"
nix = "= 0.24.0"
bitflags = "= 1.3.2"
futures = "= 0.3.27"
futures-macro = "= 0.3.27"
humantime = "= 2.1.0"
rand = "= 0.8.5"
tower = { version = "= 0.4.13", features = ["util"] }
stilsoft-common = { path = "../common" }
